--- a/index.html
+++ b/index.html
@@ -1,401 +1,294 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8">
-  <title>Mappa Verona – Comuni SpG</title>
+<meta charset="utf-8">
+<title>Mappa Verona – Comuni SpG</title>
 
-  <!-- Leaflet CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      background: #000;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      overflow: hidden;
-    }
+<style>
+html, body {
+  margin: 0;
+  height: 100%;
+  background: #000;
+  font-family: system-ui, sans-serif;
+}
+#map { position:absolute; inset:0; background:#050505; }
 
-    /* MAPPA */
-    #map {
-      position: absolute;
-      inset: 0;
-      z-index: 1;
-      background: #050505;
-    }
+/* HUD */
+#hud {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 9999;
+  padding: 14px 16px;
+  background: rgba(5,5,5,.94);
+  border-left: 4px solid #00ff9c;
+  min-width: 300px;
+  box-shadow: 0 0 20px rgba(0,0,0,.8);
+}
+.hud-title {
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 650;
+}
+.hud-sub { margin-top:6px; font-size:13px; color:#bdbdbd; }
 
-    /* HUD / PANNELLO SINISTRA */
-    #hud {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      z-index: 9999;
-      padding: 14px 16px 12px;
-      background: rgba(5, 5, 5, 0.93);
-      border-left: 4px solid #00ff9c;
-      min-width: 280px;
-      max-width: 320px;
-      pointer-events: auto; /* i pulsanti devono essere cliccabili */
-      box-shadow: 0 0 18px rgba(0, 0, 0, 0.8);
-    }
+#stats {
+  margin-top:10px;
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:6px;
+}
+.stat {
+  font-size:11px;
+  background:#0f0f0f;
+  padding:6px;
+}
+.stat strong {
+  display:block;
+  font-size:18px;
+}
+.ok strong { color:#00ff9c; }
+.warn strong { color:#ffaa00; }
 
-    .hud-title {
-      font-size: 18px;
-      font-weight: 650;
-      letter-spacing: 0.08em;
-      color: #ffffff;
-      line-height: 1.3;
-      text-transform: uppercase;
-    }
+.hud-buttons {
+  margin-top:10px;
+  display:flex;
+  gap:6px;
+}
+.hud-btn {
+  border:1px solid #00ff9c;
+  background:#041812;
+  color:#eafff7;
+  font-size:11px;
+  padding:4px 8px;
+  cursor:pointer;
+}
+.hud-btn:hover { background:#00ff9c; color:#00110b; }
 
-    .hud-sub {
-      margin-top: 6px;
-      font-size: 13px;
-      color: #b3b3b3;
-      line-height: 1.35;
-    }
+.hud-section {
+  margin-top:10px;
+  border-top:1px solid #222;
+  padding-top:6px;
+  display:none;
+}
+.hud-section ul {
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+.hud-section li {
+  font-size:12px;
+  color:#fff;
+}
 
-    .hud-meta {
-      margin-top: 10px;
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      color: #7dd9bb;
-    }
+/* Etichette comuni */
+.label-comune {
+  color:#f0f0f0;
+  font-size:11px;
+  text-shadow:0 0 6px #000;
+  pointer-events:none;
+}
 
-    .hud-buttons {
-      margin-top: 10px;
-      display: flex;
-      gap: 6px;
-      flex-wrap: wrap;
-    }
+/* colori stato */
+.comune-ok { color:#00ff9c; }
+.comune-orfano { color:#ffaa00; }
 
-    .hud-btn {
-      border: 1px solid #00ff9c;
-      background: #021b14;
-      color: #e5fff7;
-      font-size: 11px;
-      padding: 4px 8px;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-      cursor: pointer;
-    }
-
-    .hud-btn:hover {
-      background: #00ff9c;
-      color: #00110b;
-    }
-
-    .hud-section {
-      margin-top: 10px;
-      padding-top: 8px;
-      border-top: 1px solid #202020;
-      font-size: 12px;
-      color: #cccccc;
-      max-height: 160px;
-      overflow-y: auto;
-    }
-
-    .hud-section h4 {
-      margin: 0 0 4px;
-      font-size: 12px;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-      color: #00ff9c;
-    }
-
-    #referenti-list {
-      list-style: none;
-      padding-left: 0;
-      margin: 0;
-    }
-
-    #referenti-list li {
-      margin-bottom: 3px;
-      color: #ffffff;
-    }
-
-    #referenti-list .orfano {
-      color: #ff6b6b;
-      font-style: italic;
-    }
-
-    /* ETICHETTE COMUNI SULLA MAPPA */
-    .label-comune {
-      color: rgba(240, 240, 240, 0.9);
-      font-size: 11px;
-      font-weight: 500;
-      white-space: nowrap;
-      text-shadow:
-        0 0 4px rgba(0, 0, 0, 0.95),
-        0 0 8px rgba(0, 0, 0, 0.9);
-      pointer-events: none;
-    }
-
-    /* Cursore mano sui poligoni */
-    .leaflet-interactive {
-      cursor: pointer;
-    }
-  </style>
+.leaflet-interactive { cursor:pointer; }
+</style>
 </head>
+
 <body>
 
 <div id="map"></div>
 
 <div id="hud">
-  <div class="hud-title">Provincia di Verona</div>
-  <div class="hud-sub">
-    Vista generale — seleziona un comune sulla mappa.
-  </div>
-  <div class="hud-meta" id="hud-meta">
-    Comuni mappati: —
+  <div class="hud-title" id="hudTitle">Provincia di Verona</div>
+  <div class="hud-sub" id="hudSub">Vista generale</div>
+
+  <div id="stats">
+    <div class="stat ok"><strong id="cntOk">0</strong>con referente</div>
+    <div class="stat warn"><strong id="cntOrfani">0</strong>orfani</div>
   </div>
 
   <div class="hud-buttons">
-    <button class="hud-btn" id="btn-add-ref">Aggiungi referente</button>
-    <button class="hud-btn" id="btn-toggle-ref">Vedi referenti</button>
+    <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
+    <button class="hud-btn" id="btnToggle">Vedi referenti</button>
   </div>
 
-  <div class="hud-section" id="referenti-panel" style="display:none;">
-    <h4>Referenti territoriali</h4>
-    <ul id="referenti-list"></ul>
+  <div class="hud-section" id="refPanel">
+    <ul id="refList"></ul>
   </div>
 </div>
 
-<!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  // =========================
-  // MAPPA BASE
-  // =========================
-  const map = L.map('map', {
-    zoomControl: true,
-    attributionControl: false
-  }).setView([45.43, 10.99], 10); // zoom leggermente più vicino
+const map=L.map('map',{attributionControl:false})
+  .setView([45.43,10.99],10);
 
-  // TILE DARK (mappa vera sotto, non più rettangolo nero)
-  L.tileLayer(
-    'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
-    {
-      maxZoom: 18,
-      subdomains: 'abcd'
-    }
-  ).addTo(map);
+L.tileLayer(
+  'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+  {maxZoom:18}
+).addTo(map);
 
-  let selectedLayer = null;
-  let labels = [];
-  let referentiVisibili = false;
+/* ===== REFERENTI (mock) ===== */
+const referenti={
+  "Verona":["Vincenzo R.","Anna R."]
+};
 
-  // memoria referenti: { "Comune di Verona": ["Nome 1", "Nome 2"] ... }
-  const referentiPerComune = {
-    // esempio iniziale
-    "Verona": ["Vincenzo Russo (esempio)"]
-  };
+let selectedLayer=null;
+let labels=[];
+let comuniNomi=[];
+let refVisibili=false;
 
-  const hudTitle = document.querySelector('.hud-title');
-  const hudSub   = document.querySelector('.hud-sub');
-  const hudMeta  = document.getElementById('hud-meta');
-  const refPanel = document.getElementById('referenti-panel');
-  const refList  = document.getElementById('referenti-list');
-  const btnAdd   = document.getElementById('btn-add-ref');
-  const btnToggle= document.getElementById('btn-toggle-ref');
+/* ===== HUD ===== */
+const hudTitle=document.getElementById('hudTitle');
+const hudSub=document.getElementById('hudSub');
+const refPanel=document.getElementById('refPanel');
+const refList=document.getElementById('refList');
 
-  let comuniLayer = null;
+/* ===== UTILS ===== */
+const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
+const hasRef=n=>referenti[n]&&referenti[n].length>0;
 
-  // =========================
-  // CARICA COMUNI
-  // =========================
-  fetch('data/comuni_verona.json')
-    .then(r => r.json())
-    .then(data => {
-      // OMBRA / PROFONDITÀ leggera
-      L.geoJSON(data, {
-        style: {
-          color: '#000',
-          weight: 4,
-          opacity: 0.35
-        }
+/* ===== COMUNI ===== */
+fetch('data/comuni_verona.json')
+.then(r=>r.json())
+.then(data=>{
+  const layer=L.geoJSON(data,{
+    style:f=>{
+      const n=nomeComune(f.properties);
+      comuniNomi.push(n);
+      return {
+        color: hasRef(n) ? '#00ff9c' : '#ffaa00',
+        weight:1,
+        fillOpacity:0
+      };
+    },
+    onEachFeature:(f,l)=>{
+      const nome=nomeComune(f.properties);
+
+      const center=l.getBounds().getCenter();
+      const lab=L.marker(center,{
+        icon:L.divIcon({
+          className:'label-comune '+(hasRef(nome)?'comune-ok':'comune-orfano'),
+          html:nome,
+          iconSize:[120,16]
+        }),
+        interactive:false
       }).addTo(map);
+      labels.push(lab);
 
-      comuniLayer = L.geoJSON(data, {
-        style: {
-          color: '#00ff9c',
-          weight: 1,
-          opacity: 0.9,
-          fillOpacity: 0
-        },
-        onEachFeature: (feature, layer) => {
-          const nome =
-            feature.properties.nome ||
-            feature.properties.name ||
-            feature.properties.DENOM_COM ||
-            'Comune';
+      l.on('click',()=>{
+        selezionaComune(l,nome);
+      });
 
-          // ETICHETTA (zoom OUT)
-          const center = layer.getBounds().getCenter();
-          const label = L.marker(center, {
-            interactive: false,
-            icon: L.divIcon({
-              className: 'label-comune',
-              html: nome,
-              iconSize: [120, 16]
-            })
-          });
-          labels.push(label);
-          label.addTo(map);
-
-          // HOVER
-          layer.on('mouseover', () => {
-            if (layer !== selectedLayer) {
-              layer.setStyle({ color:'#ffffff', weight:2 });
-            }
-          });
-
-          layer.on('mouseout', () => {
-            if (layer !== selectedLayer) {
-              layer.setStyle({ color:'#00ff9c', weight:1 });
-            }
-          });
-
-          // CLICK: selezione comune
-          layer.on('click', () => {
-            selezionaComune(layer, nome);
-          });
-        }
-      }).addTo(map);
-
-      // adatta vista alla provincia
-      map.fitBounds(comuniLayer.getBounds());
-
-      // aggiorna contatore comuni
-      try {
-        hudMeta.textContent = 'Comuni mappati: ' + comuniLayer.getLayers().length;
-      } catch(e) {
-        hudMeta.textContent = 'Comuni mappati: —';
-      }
-
-      // gestione visibilità etichette
-      function updateLabels() {
-        const z = map.getZoom();
-        labels.forEach(l => {
-          if (z <= 10.5) {
-            if (!map.hasLayer(l)) l.addTo(map);
-          } else {
-            if (map.hasLayer(l)) map.removeLayer(l);
-          }
-        });
-      }
-
-      map.on('zoomend', updateLabels);
-      updateLabels();
-    });
-
-  // =========================
-  // FUNZIONE: seleziona comune
-  // =========================
-  function selezionaComune(layer, nome) {
-    // reset selezione precedente
-    if (selectedLayer && selectedLayer !== layer) {
-      selectedLayer.setStyle({ color:'#00ff9c', weight:1 });
-    }
-
-    selectedLayer = layer;
-    layer.setStyle({ color:'#ffffff', weight:3 });
-
-    map.fitBounds(layer.getBounds(), { padding:[40,40] });
-
-    hudTitle.textContent = 'Comune di ' + nome;
-    aggiornaTestoSub(nome);
-    if (referentiVisibili) {
-      mostraReferenti(nome);
-    }
-  }
-
-  // =========================
-  // TESTO SUB IN BASE AI REFERENTI
-  // =========================
-  function aggiornaTestoSub(nomeComune) {
-    const lista = referentiPerComune[nomeComune] || [];
-    if (!lista.length) {
-      hudSub.textContent = 'Nessun referente — ⚠️ Comune orfano';
-    } else {
-      hudSub.textContent = 'Referenti presenti: ' + lista.length;
-    }
-  }
-
-  // =========================
-  // MOSTRA/NASCONDI REFERENTI
-  // =========================
-  function mostraReferenti(nomeComune) {
-    refList.innerHTML = '';
-    const lista = referentiPerComune[nomeComune] || [];
-
-    if (!lista.length) {
-      const li = document.createElement('li');
-      li.textContent = '⚠️ Nessun referente (comune orfano)';
-      li.classList.add('orfano');
-      refList.appendChild(li);
-    } else {
-      lista.forEach(nome => {
-        const li = document.createElement('li');
-        li.textContent = nome;
-        refList.appendChild(li);
+      l.on('mouseover',()=>{
+        if(l!==selectedLayer) l.setStyle({color:'#fff',weight:2});
+      });
+      l.on('mouseout',()=>{
+        if(l!==selectedLayer)
+          l.setStyle({color:hasRef(nome)?'#00ff9c':'#ffaa00',weight:1});
       });
     }
+  }).addTo(map);
+
+  map.fitBounds(layer.getBounds());
+  aggiornaContatori();
+
+  map.on('zoomend',aggiornaLabelVisibilita);
+  aggiornaLabelVisibilita();
+});
+
+/* ===== SELEZIONE COMUNE ===== */
+function selezionaComune(layer,nome){
+  if(selectedLayer){
+    const pn=nomeComune(selectedLayer.feature.properties);
+    selectedLayer.setStyle({
+      color:hasRef(pn)?'#00ff9c':'#ffaa00',
+      weight:1
+    });
   }
+  selectedLayer=layer;
 
-  // =========================
-  // BOTTONI HUD
-  // =========================
+  layer.setStyle({color:'#fff',weight:3});
+  map.fitBounds(layer.getBounds(),{padding:[40,40]});
 
-  // Aggiungi referente
-  btnAdd.addEventListener('click', () => {
-    if (!selectedLayer) {
-      alert('Seleziona prima un comune sulla mappa.');
-      return;
-    }
+  hudTitle.innerText='Comune di '+nome;
+  hudSub.innerText=hasRef(nome)?
+    'Referenti presenti: '+referenti[nome].length:
+    '⚠ Comune orfano';
 
-    const nomeComune = hudTitle.textContent.replace('Comune di ', '');
-    const nuovo = prompt('Inserisci il tuo nome come referente per ' + nomeComune + ':');
-    if (!nuovo) return;
+  // nascondi label quando un comune è selezionato
+  labels.forEach(l=>map.removeLayer(l));
 
-    if (!referentiPerComune[nomeComune]) {
-      referentiPerComune[nomeComune] = [];
-    }
-    referentiPerComune[nomeComune].push(nuovo.trim());
+  if(refVisibili) mostraReferenti(nome);
+}
 
-    aggiornaTestoSub(nomeComune);
-    if (referentiVisibili) {
-      mostraReferenti(nomeComune);
-    }
+/* ===== LABEL VISIBILITA ===== */
+function aggiornaLabelVisibilita(){
+  if(selectedLayer) return; // se lavoro su un comune, niente label
+  const z=map.getZoom();
+  labels.forEach(l=>{
+    if(z<=12) l.addTo(map);
+    else map.removeLayer(l);
   });
+}
 
-  // Vedi / nascondi referenti
-  btnToggle.addEventListener('click', () => {
-    referentiVisibili = !referentiVisibili;
+/* ===== REFERENTI ===== */
+function mostraReferenti(nome){
+  refList.innerHTML='';
+  const lista=referenti[nome]||[];
+  if(!lista.length){
+    const li=document.createElement('li');
+    li.textContent='⚠ Nessun referente';
+    li.style.color='#ffaa00';
+    refList.appendChild(li);
+  } else {
+    lista.forEach(r=>{
+      const li=document.createElement('li');
+      li.textContent=r;
+      refList.appendChild(li);
+    });
+  }
+  refPanel.style.display='block';
+}
 
-    if (referentiVisibili) {
-      btnToggle.textContent = 'Nascondi referenti';
-      refPanel.style.display = 'block';
+/* ===== BOTTONI ===== */
+document.getElementById('btnAdd').onclick=()=>{
+  if(!selectedLayer) return alert('Seleziona un comune');
+  const nome=hudTitle.innerText.replace('Comune di ','');
+  const n=prompt('Inserisci il tuo nome');
+  if(!n) return;
+  if(!referenti[nome]) referenti[nome]=[];
+  referenti[nome].push(n);
 
-      const nomeComune = hudTitle.textContent.replace('Comune di ', '');
-      if (nomeComune && nomeComune !== 'Provincia di Verona') {
-        mostraReferenti(nomeComune);
-      } else {
-        // nessun comune selezionato
-        refList.innerHTML = '';
-        const li = document.createElement('li');
-        li.textContent = 'Seleziona un comune per vedere i referenti.';
-        refList.appendChild(li);
-      }
-    } else {
-      btnToggle.textContent = 'Vedi referenti';
-      refPanel.style.display = 'none';
-    }
-  });
+  hudSub.innerText='Referenti presenti: '+referenti[nome].length;
+  aggiornaContatori();
+
+  if(refVisibili) mostraReferenti(nome);
+};
+
+document.getElementById('btnToggle').onclick=()=>{
+  refVisibili=!refVisibili;
+  document.getElementById('btnToggle').innerText=
+    refVisibili?'Nascondi referenti':'Vedi referenti';
+
+  if(refVisibili && selectedLayer){
+    mostraReferenti(hudTitle.innerText.replace('Comune di ',''));
+  } else {
+    refPanel.style.display='none';
+  }
+};
+
+/* ===== CONTATORI ===== */
+function aggiornaContatori(){
+  const ok=comuniNomi.filter(n=>hasRef(n)).length;
+  document.getElementById('cntOk').innerText=ok;
+  document.getElementById('cntOrfani').innerText=comuniNomi.length-ok;
+}
 </script>
 
 </body>
