--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html, body {
   padding: 14px 16px;
   background: rgba(5,5,5,.94);
   border-left: 4px solid #00ff9c;
-  min-width: 300px;
+  min-width: 320px;
   box-shadow: 0 0 20px rgba(0,0,0,.85);
 }
 
@@ -32,53 +32,44 @@ html, body {
   font-size: 18px;
   font-weight: 650;
   color: #fff;
-  letter-spacing: .08em;
   text-transform: uppercase;
 }
 .hud-sub { margin-top:6px; font-size:13px; color:#bdbdbd; }
 
+/* ===== DASHBOARD CONTATORI ===== */
 #stats {
-  margin-top:10px;
+  margin-top:12px;
   display:grid;
   grid-template-columns:1fr 1fr;
-  gap:6px;
+  gap:8px;
 }
 .stat {
-  font-size:11px;
-  background:#0f0f0f;
-  padding:6px;
-}
-.stat strong {
-  display:block;
-  font-size:18px;
-}
-.ok strong { color:#00ff9c; }
-.warn strong { color:#ffaa00; }
-
-/* ===== LEGENDA ===== */
-#legend {
-  margin-top:10px;
-  font-size:11px;
-  background:#0c0c0c;
+  background:#0e0e0e;
   padding:8px;
 }
-.legend-row {
-  display:flex;
-  align-items:center;
-  gap:8px;
-  margin-bottom:4px;
+.stat-title {
+  font-size:10px;
+  text-transform:uppercase;
+  letter-spacing:.12em;
+  opacity:.8;
 }
-.legend-dot {
-  width:10px;
-  height:10px;
-  border-radius:50%;
+.stat-value {
+  font-size:26px;
+  font-weight:700;
 }
-.legend-ok { background:#00ff9c; }
-.legend-warn { background:#ffaa00; }
+.stat-ok .stat-value { color:#00ff9c; }
+.stat-warn .stat-value { color:#ffaa00; }
 
-/* ===== BOTTONI ===== */
+/* legenda inline */
+.stat-legend {
+  margin-top:4px;
+  font-size:11px;
+  color:#aaa;
+}
+
+/* BOTTONI */
 .hud-buttons {
-  margin-top:10px;
+  margin-top:12px;
   display:flex;
   gap:6px;
 }
@@ -92,33 +83,27 @@ html, body {
 }
 .hud-btn:hover { background:#00ff9c; color:#00110b; }
 
-/* ===== REFERENTI ===== */
+/* REFERENTI */
 .hud-section {
   margin-top:10px;
   border-top:1px solid #222;
   padding-top:6px;
   display:none;
 }
-.hud-section ul {
-  list-style:none;
-  padding:0;
-  margin:0;
-}
 .hud-section li {
   font-size:12px;
   color:#fff;
 }
 
-/* ===== LABEL COMUNI ===== */
+/* LABEL */
 .label-comune {
   color:#ffffff;
   font-size:11px;
-  font-weight:500;
   text-shadow:0 0 6px rgba(0,0,0,.9);
   pointer-events:none;
 }
 
-.leaflet-interactive { cursor:pointer; }
+.leaflet-interactive { cursor:pointer }
 </style>
 </head>
 
@@ -131,18 +116,15 @@ html, body {
   <div class="hud-sub" id="hudSub">Vista generale</div>
 
   <div id="stats">
-    <div class="stat ok"><strong id="cntOk">0</strong>con referente</div>
-    <div class="stat warn"><strong id="cntOrfani">0</strong>orfani</div>
-  </div>
-
-  <div id="legend">
-    <div class="legend-row">
-      <span class="legend-dot legend-ok"></span>
-      Comune con referente
+    <div class="stat stat-ok">
+      <div class="stat-title">Comuni coperti</div>
+      <div class="stat-value" id="cntOk">0</div>
+      <div class="stat-legend">≥ 1 referente</div>
     </div>
-    <div class="legend-row">
-      <span class="legend-dot legend-warn"></span>
-      Comune orfano
+    <div class="stat stat-warn">
+      <div class="stat-title">Comuni orfani</div>
+      <div class="stat-value" id="cntOrfani">0</div>
+      <div class="stat-legend">nessun referente</div>
     </div>
   </div>
 
@@ -166,34 +148,33 @@ L.tileLayer(
   {maxZoom:18}
 ).addTo(map);
 
-/* ===== DATI ===== */
+/* DATI */
 const referenti={
   "Verona":["Vincenzo R.","Anna R."]
 };
 
 let labels=[];
-let comuniNomi=[];
+let comuni=[];
 let selectedLayer=null;
 let refVisibili=false;
 
-/* ===== HUD ===== */
+/* HUD */
 const hudTitle=document.getElementById('hudTitle');
 const hudSub=document.getElementById('hudSub');
 const refPanel=document.getElementById('refPanel');
 const refList=document.getElementById('refList');
 
-/* ===== UTILS ===== */
 const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
 const hasRef=n=>referenti[n]&&referenti[n].length>0;
 
-/* ===== COMUNI ===== */
+/* COMUNI */
 fetch('data/comuni_verona.json')
 .then(r=>r.json())
 .then(data=>{
   const layer=L.geoJSON(data,{
     style:f=>{
       const n=nomeComune(f.properties);
-      comuniNomi.push(n);
+      comuni.push(n);
       return {
         color:hasRef(n)?'#00ff9c':'#ffaa00',
         weight:1,
@@ -203,8 +184,7 @@ fetch('data/comuni_verona.json')
     onEachFeature:(f,l)=>{
       const nome=nomeComune(f.properties);
 
-      const center=l.getBounds().getCenter();
-      const lab=L.marker(center,{
+      const lab=L.marker(l.getBounds().getCenter(),{
         icon:L.divIcon({
           className:'label-comune',
           html:nome,
@@ -214,14 +194,6 @@ fetch('data/comuni_verona.json')
       }).addTo(map);
       labels.push(lab);
 
-      l.on('mouseover',()=>{
-        if(l!==selectedLayer) l.setStyle({color:'#fff',weight:2});
-      });
-      l.on('mouseout',()=>{
-        if(l!==selectedLayer)
-          l.setStyle({color:hasRef(nome)?'#00ff9c':'#ffaa00',weight:1});
-      });
-
       l.on('click',()=>{
         selezionaComune(l,nome);
       });
@@ -230,24 +202,33 @@ fetch('data/comuni_verona.json')
 
   map.fitBounds(layer.getBounds());
   aggiornaContatori();
-  map.on('zoomend',aggiornaLabelVisibilita);
-  aggiornaLabelVisibilita();
+  map.on('zoomend',gestioneZoom);
+  gestioneZoom();
 });
 
-/* ===== LABEL VISIBILITÀ ===== */
-function aggiornaLabelVisibilita(){
-  if(selectedLayer) {
-    labels.forEach(l=>map.removeLayer(l));
-    return;
-  }
+/* ZOOM → gestione focus */
+function gestioneZoom(){
   const z=map.getZoom();
+
+  // se molto zoom-out: esci dal focus comune
+  if(z <= 10 && selectedLayer){
+    selectedLayer.setStyle({
+      color:hasRef(nomeComune(selectedLayer.feature.properties)) ? '#00ff9c' : '#ffaa00',
+      weight:1
+    });
+    selectedLayer=null;
+    hudTitle.innerText='Provincia di Verona';
+    hudSub.innerText='Vista generale';
+  }
+
+  // labels
   labels.forEach(l=>{
-    if(z<=12) l.addTo(map);
+    if(!selectedLayer && z<=12) map.addLayer(l);
     else map.removeLayer(l);
   });
 }
 
-/* ===== SELEZIONE COMUNE ===== */
+/* SELEZIONE */
 function selezionaComune(layer,nome){
   if(selectedLayer){
     const prev=nomeComune(selectedLayer.feature.properties);
@@ -257,7 +238,6 @@ function selezionaComune(layer,nome){
     });
   }
   selectedLayer=layer;
-
   layer.setStyle({color:'#fff',weight:3});
   map.fitBounds(layer.getBounds(),{padding:[40,40]});
 
@@ -270,7 +250,7 @@ function selezionaComune(layer,nome){
   if(refVisibili) mostraReferenti(nome);
 }
 
-/* ===== REFERENTI ===== */
+/* REFERENTI */
 function mostraReferenti(nome){
   refList.innerHTML='';
   const lista=referenti[nome]||[];
@@ -289,7 +269,7 @@ function mostraReferenti(nome){
   refPanel.style.display='block';
 }
 
-/* ===== BOTTONI ===== */
+/* BOTTONI */
 document.getElementById('btnAdd').onclick=()=>{
   if(!selectedLayer) return alert('Seleziona un comune');
   const nome=hudTitle.innerText.replace('Comune di ','');
@@ -297,7 +277,6 @@ document.getElementById('btnAdd').onclick=()=>{
   if(!n) return;
   if(!referenti[nome]) referenti[nome]=[];
   referenti[nome].push(n);
-
   hudSub.innerText='Referenti presenti: '+referenti[nome].length;
   aggiornaContatori();
   if(refVisibili) mostraReferenti(nome);
@@ -307,19 +286,16 @@ document.getElementById('btnToggle').onclick=()=>{
   refVisibili=!refVisibili;
   document.getElementById('btnToggle').innerText=
     refVisibili?'Nascondi referenti':'Vedi referenti';
-
-  if(refVisibili && selectedLayer){
+  if(refVisibili && selectedLayer)
     mostraReferenti(hudTitle.innerText.replace('Comune di ',''));
-  } else {
-    refPanel.style.display='none';
-  }
+  else refPanel.style.display='none';
 };
 
-/* ===== CONTATORI ===== */
+/* CONTATORI */
 function aggiornaContatori(){
-  const ok=comuniNomi.filter(n=>hasRef(n)).length;
+  const ok=comuni.filter(n=>hasRef(n)).length;
   document.getElementById('cntOk').innerText=ok;
-  document.getElementById('cntOrfani').innerText=comuniNomi.length-ok;
+  document.getElementById('cntOrfani').innerText=comuni.length-ok;
 }
 </script>
 
