--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html, body {
   padding: 14px 16px;
   background: rgba(5,5,5,.94);
   border-left: 4px solid #00ff9c;
-  min-width: 320px;
+  min-width: 340px;
   box-shadow: 0 0 20px rgba(0,0,0,.85);
 }
 
@@ -36,7 +36,7 @@ html, body {
 }
 .hud-sub { margin-top:6px; font-size:13px; color:#bdbdbd; }
 
-/* ===== DASHBOARD CONTATORI ===== */
+/* ===== CONTATORI COMUNI ===== */
 #stats {
   margin-top:12px;
   display:grid;
@@ -51,7 +51,6 @@ html, body {
   font-size:10px;
   text-transform:uppercase;
   letter-spacing:.12em;
-  opacity:.8;
 }
 .stat-value {
   font-size:26px;
@@ -60,14 +59,56 @@ html, body {
 .stat-ok .stat-value { color:#00ff9c; }
 .stat-warn .stat-value { color:#ffaa00; }
 
-/* legenda inline */
-.stat-legend {
-  margin-top:4px;
-  font-size:11px;
-  color:#aaa;
+/* ===== FARMACIE ===== */
+#farmacie-box {
+  margin-top:14px;
+  padding-top:10px;
+  border-top:1px solid #222;
 }
 
-/* BOTTONI */
+#farmacie-stats {
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:6px;
+  margin-bottom:8px;
+}
+.farm-stat {
+  background:#0e0e0e;
+  padding:6px;
+  font-size:11px;
+}
+.farm-stat strong {
+  display:block;
+  font-size:20px;
+}
+
+/* legenda */
+#farmacie-legend {
+  font-size:11px;
+  line-height:1.4;
+}
+.legend-row {
+  display:flex;
+  align-items:center;
+  gap:6px;
+}
+.dot {
+  width:10px; height:10px; border-radius:50%;
+}
+.triangle {
+  width:0; height:0;
+  border-left:6px solid transparent;
+  border-right:6px solid transparent;
+  border-bottom:10px solid;
+}
+
+/* colori stato */
+.accetta { background:#00ff9c; border-bottom-color:#00ff9c; }
+.in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff; }
+.da_contattare { background:#ffaa00; border-bottom-color:#ffaa00; }
+.rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d; }
+
+/* ===== BOTTONI ===== */
 .hud-buttons {
   margin-top:12px;
   display:flex;
@@ -83,7 +124,7 @@ html, body {
 }
 .hud-btn:hover { background:#00ff9c; color:#00110b; }
 
-/* REFERENTI */
+/* referenti */
 .hud-section {
   margin-top:10px;
   border-top:1px solid #222;
@@ -95,7 +136,7 @@ html, body {
   color:#fff;
 }
 
-/* LABEL */
+/* label comuni */
 .label-comune {
   color:#ffffff;
   font-size:11px;
@@ -115,19 +156,40 @@ html, body {
   <div class="hud-title" id="hudTitle">Provincia di Verona</div>
   <div class="hud-sub" id="hudSub">Vista generale</div>
 
+  <!-- CONTATORI COMUNI -->
   <div id="stats">
     <div class="stat stat-ok">
       <div class="stat-title">Comuni coperti</div>
       <div class="stat-value" id="cntOk">0</div>
-      <div class="stat-legend">≥ 1 referente</div>
     </div>
     <div class="stat stat-warn">
       <div class="stat-title">Comuni orfani</div>
       <div class="stat-value" id="cntOrfani">0</div>
-      <div class="stat-legend">nessun referente</div>
     </div>
   </div>
 
+  <!-- FARMACIE -->
+  <div id="farmacie-box">
+    <div id="farmacie-stats">
+      <div class="farm-stat">
+        <strong id="farmCount">0</strong>
+        farmacie visibili
+      </div>
+      <div class="farm-stat">
+        <strong id="farmAccetta">0</strong>
+        accettano
+      </div>
+    </div>
+
+    <div id="farmacie-legend">
+      <div class="legend-row"><span class="dot accetta"></span> Privata – accetta</div>
+      <div class="legend-row"><span class="triangle accetta"></span> Comunale – accetta</div>
+      <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
+      <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
+    </div>
+  </div>
+
+  <!-- REFERENTI -->
   <div class="hud-buttons">
     <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
     <button class="hud-btn" id="btnToggle">Vedi referenti</button>
@@ -140,6 +202,7 @@ html, body {
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+/* ===== MAP ===== */
 const map=L.map('map',{attributionControl:false})
   .setView([45.43,10.99],10);
 
@@ -148,26 +211,33 @@ L.tileLayer(
   {maxZoom:18}
 ).addTo(map);
 
-/* DATI */
+/* ===== DATI ===== */
 const referenti={
   "Verona":["Vincenzo R.","Anna R."]
 };
 
-let labels=[];
-let comuni=[];
-let selectedLayer=null;
-let refVisibili=false;
+/* FARMACIE MOCK */
+const farmacie=[
+  {nome:"Farmacia Centrale", comune:"Verona", lat:45.438, lng:10.992, tipo:"privata", stato:"accetta"},
+  {nome:"Farmacia San Zeno", comune:"Verona", lat:45.443, lng:10.980, tipo:"comunale", stato:"in_trattativa"},
+  {nome:"Farmacia Borgo Roma", comune:"Verona", lat:45.389, lng:10.982, tipo:"privata", stato:"da_contattare"}
+];
 
-/* HUD */
+let labels=[], comuni=[], selectedLayer=null;
+let refVisibili=false;
+let farmLayer=L.layerGroup().addTo(map);
+
+/* ===== HUD ===== */
 const hudTitle=document.getElementById('hudTitle');
 const hudSub=document.getElementById('hudSub');
 const refPanel=document.getElementById('refPanel');
 const refList=document.getElementById('refList');
 
+/* ===== UTILS ===== */
 const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
 const hasRef=n=>referenti[n]&&referenti[n].length>0;
 
-/* COMUNI */
+/* ===== COMUNI ===== */
 fetch('data/comuni_verona.json')
 .then(r=>r.json())
 .then(data=>{
@@ -177,26 +247,18 @@ fetch('data/comuni_verona.json')
       comuni.push(n);
       return {
         color:hasRef(n)?'#00ff9c':'#ffaa00',
-        weight:1,
-        fillOpacity:0
+        weight:1
       };
     },
     onEachFeature:(f,l)=>{
       const nome=nomeComune(f.properties);
-
       const lab=L.marker(l.getBounds().getCenter(),{
-        icon:L.divIcon({
-          className:'label-comune',
-          html:nome,
-          iconSize:[120,16]
-        }),
+        icon:L.divIcon({className:'label-comune',html:nome}),
         interactive:false
       }).addTo(map);
       labels.push(lab);
 
-      l.on('click',()=>{
-        selezionaComune(l,nome);
-      });
+      l.on('click',()=>selezionaComune(l,nome));
     }
   }).addTo(map);
 
@@ -206,37 +268,26 @@ fetch('data/comuni_verona.json')
   gestioneZoom();
 });
 
-/* ZOOM → gestione focus */
+/* ===== ZOOM ===== */
 function gestioneZoom(){
   const z=map.getZoom();
-
-  // se molto zoom-out: esci dal focus comune
-  if(z <= 10 && selectedLayer){
-    selectedLayer.setStyle({
-      color:hasRef(nomeComune(selectedLayer.feature.properties)) ? '#00ff9c' : '#ffaa00',
-      weight:1
-    });
+  if(z<=10 && selectedLayer){
+    selectedLayer.setStyle({weight:1});
     selectedLayer=null;
     hudTitle.innerText='Provincia di Verona';
     hudSub.innerText='Vista generale';
+    farmLayer.clearLayers();
+    document.getElementById('farmCount').innerText=0;
   }
-
-  // labels
   labels.forEach(l=>{
     if(!selectedLayer && z<=12) map.addLayer(l);
     else map.removeLayer(l);
   });
 }
 
-/* SELEZIONE */
+/* ===== SELEZIONE COMUNE ===== */
 function selezionaComune(layer,nome){
-  if(selectedLayer){
-    const prev=nomeComune(selectedLayer.feature.properties);
-    selectedLayer.setStyle({
-      color:hasRef(prev)?'#00ff9c':'#ffaa00',
-      weight:1
-    });
-  }
+  if(selectedLayer) selectedLayer.setStyle({weight:1});
   selectedLayer=layer;
   layer.setStyle({color:'#fff',weight:3});
   map.fitBounds(layer.getBounds(),{padding:[40,40]});
@@ -247,51 +298,30 @@ function selezionaComune(layer,nome){
     :'⚠ Comune orfano';
 
   labels.forEach(l=>map.removeLayer(l));
-  if(refVisibili) mostraReferenti(nome);
+  mostraFarmacie(nome);
 }
 
-/* REFERENTI */
-function mostraReferenti(nome){
-  refList.innerHTML='';
-  const lista=referenti[nome]||[];
-  if(!lista.length){
-    const li=document.createElement('li');
-    li.textContent='⚠ Nessun referente';
-    li.style.color='#ffaa00';
-    refList.appendChild(li);
-  } else {
-    lista.forEach(r=>{
-      const li=document.createElement('li');
-      li.textContent=r;
-      refList.appendChild(li);
-    });
-  }
-  refPanel.style.display='block';
+/* ===== FARMACIE ===== */
+function mostraFarmacie(comune){
+  farmLayer.clearLayers();
+  const vis=farmacie.filter(f=>f.comune===comune);
+  document.getElementById('farmCount').innerText=vis.length;
+  document.getElementById('farmAccetta').innerText=
+    vis.filter(f=>f.stato==="accetta").length;
+
+  vis.forEach(f=>{
+    const html=f.tipo==="privata"
+      ? `<div class="dot ${f.stato}"></div>`
+      : `<div class="triangle ${f.stato}"></div>`;
+
+    const m=L.marker([f.lat,f.lng],{
+      icon:L.divIcon({html:html,iconSize:[14,14]})
+    }).bindPopup(`<strong>${f.nome}</strong><br>${f.tipo}<br>${f.stato}`);
+    farmLayer.addLayer(m);
+  });
 }
 
-/* BOTTONI */
-document.getElementById('btnAdd').onclick=()=>{
-  if(!selectedLayer) return alert('Seleziona un comune');
-  const nome=hudTitle.innerText.replace('Comune di ','');
-  const n=prompt('Inserisci il tuo nome');
-  if(!n) return;
-  if(!referenti[nome]) referenti[nome]=[];
-  referenti[nome].push(n);
-  hudSub.innerText='Referenti presenti: '+referenti[nome].length;
-  aggiornaContatori();
-  if(refVisibili) mostraReferenti(nome);
-};
-
-document.getElementById('btnToggle').onclick=()=>{
-  refVisibili=!refVisibili;
-  document.getElementById('btnToggle').innerText=
-    refVisibili?'Nascondi referenti':'Vedi referenti';
-  if(refVisibili && selectedLayer)
-    mostraReferenti(hudTitle.innerText.replace('Comune di ',''));
-  else refPanel.style.display='none';
-};
-
-/* CONTATORI */
+/* ===== CONTATORI COMUNI ===== */
 function aggiornaContatori(){
   const ok=comuni.filter(n=>hasRef(n)).length;
   document.getElementById('cntOk').innerText=ok;
