--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ html, body {
   left: 18px;
   z-index: 9999;
   padding: 14px 16px;
-  background: rgba(8,8,8,.94);
+  background: rgba(5,5,5,.94);
   border-left: 4px solid #00ff9c;
-  min-width: 330px;
-  box-shadow: 0 0 18px rgba(0,0,0,.85);
+  min-width: 340px;
+  box-shadow: 0 0 20px rgba(0,0,0,.85);
 }
 
 .hud-title {
@@ -48,7 +48,7 @@ html, body {
   gap: 8px;
 }
 .stat {
-  background: #111;
+  background: #0e0e0e;
   padding: 8px;
 }
 .stat-title {
@@ -63,7 +63,7 @@ html, body {
 .stat-ok .stat-value { color:#00ff9c; }
 .stat-warn .stat-value { color:#ffaa00; }
 
-/* farmacie panel */
+/* farmacie */
 #farm-box {
   margin-top: 14px;
   padding-top: 10px;
@@ -76,20 +76,19 @@ html, body {
   letter-spacing: .12em;
   color: #9ef5d9;
 }
-#farm-summary {
+#farm-count {
   font-size: 12px;
-  color: #dcdcdc;
+  line-height: 1.45;
   margin-bottom: 6px;
 }
 
-/* legenda farmacie */
+/* legenda */
 .legend-row {
   display: flex;
   align-items: center;
   gap: 6px;
   font-size: 11px;
 }
-
 .dot {
   width: 12px;
   height: 12px;
@@ -105,7 +104,23 @@ html, body {
 /* colori stato */
 .accetta { background:#00ff9c; border-bottom-color:#00ff9c; }
 .in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff; }
+.da_contattare { background:#ffaa00; border-bottom-color:#ffaa00; }
 .rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d; }
+
+/* referenti */
+.hud-buttons {
+  margin-top: 12px;
+  display: flex;
+  gap: 6px;
+}
+.hud-btn {
+  border:1px solid #00ff9c;
+  background:#041812;
+  color:#eafff7;
+  font-size:11px;
+  padding:4px 8px;
+  cursor:pointer;
+}
 
 /* label comuni */
 .label-comune {
@@ -140,12 +155,12 @@ html, body {
 
   <div id="farm-box">
     <h4>Farmacie (comune selezionato)</h4>
-    <div id="farm-summary">—</div>
+    <div id="farm-count">—</div>
 
     <div class="legend-row"><span class="dot accetta"></span> Privata – accetta</div>
     <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
     <div class="legend-row"><span class="triangle accetta"></span> Comunale – accetta</div>
-    <div class="legend-row"><span class="triangle rifiuta"></span> Comunale – rifiuta</div>
+    <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
   </div>
 </div>
 
@@ -163,6 +178,28 @@ L.tileLayer(
 /* DATI */
 const referenti = { "Verona": ["Vincenzo R."] };
 
+const farmacie = [
+  {
+    nome:"Farmacia Centrale",
+    comune:"Verona",
+    lat:45.438, lng:10.992,
+    tipo:"privata",
+    stato:"accetta",
+    indirizzo:"Via Roma 1, Verona",
+    telefono:"+39 045 000000",
+    email:"info@farmaciacentrale.it"
+  },
+  {
+    nome:"Farmacia San Zeno",
+    comune:"Verona",
+    lat:45.443, lng:10.980,
+    tipo:"comunale",
+    stato:"in_trattativa",
+    indirizzo:"Via San Zeno 10, Verona",
+    telefono:"+39 045 111111"
+  }
+];
+
 let labels=[], comuni=[], selectedLayer=null;
 let farmLayer=L.layerGroup().addTo(map);
 
@@ -170,7 +207,6 @@ let farmLayer=L.layerGroup().addTo(map);
 const hudTitle=document.getElementById('hudTitle');
 const hudSub=document.getElementById('hudSub');
 
-/* UTILS */
 const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
 const hasRef=n=>referenti[n] && referenti[n].length>0;
 
@@ -190,13 +226,11 @@ fetch('data/comuni_verona.json')
     },
     onEachFeature:(f,l)=>{
       const nome=nomeComune(f.properties);
-
       const lab=L.marker(l.getBounds().getCenter(),{
         icon:L.divIcon({className:'label-comune',html:nome}),
         interactive:false
       }).addTo(map);
       labels.push(lab);
-
       l.on('click',()=>selezionaComune(l,nome));
     }
   }).addTo(map);
@@ -220,7 +254,7 @@ function gestioneZoom(){
     hudTitle.innerText='Provincia di Verona';
     hudSub.innerText='Vista generale';
     farmLayer.clearLayers();
-    document.getElementById('farm-summary').innerText='—';
+    document.getElementById('farm-count').innerText='—';
   }
   labels.forEach(l=>{
     if(!selectedLayer && z<=12) map.addLayer(l);
@@ -239,7 +273,6 @@ function selezionaComune(layer,nome){
   }
   selectedLayer=layer;
   layer.setStyle({ color:'#ffffff', weight:3 });
-
   map.fitBounds(layer.getBounds(),{ padding:[40,40] });
 
   hudTitle.innerText='Comune di '+nome;
@@ -252,32 +285,51 @@ function selezionaComune(layer,nome){
 }
 
 /* FARMACIE */
-let farmacie=[];
-fetch('data/farmacie_verona.json')
-  .then(r=>r.ok?r.json():[])
-  .then(d=>farmacie=d);
-
 function mostraFarmacie(comune){
   farmLayer.clearLayers();
-  const vis=farmacie.filter(f=>f.comune===comune);
-  document.getElementById('farm-summary').innerText=
-    vis.length+' farmacie';
+  const vis = farmacie.filter(f => f.comune === comune);
+
+  if(!vis.length){
+    document.getElementById('farm-count').innerText='Nessuna farmacia';
+    return;
+  }
+
+  let priv=0, comu=0, acc=0, trat=0, cont=0, rif=0;
+  vis.forEach(f=>{
+    f.tipo==="comunale"?comu++:priv++;
+    if(f.stato==="accetta") acc++;
+    else if(f.stato==="in_trattativa") trat++;
+    else if(f.stato==="da_contattare") cont++;
+    else if(f.stato==="rifiuta") rif++;
+  });
+
+  const conquista = Math.round(((acc+trat)/vis.length)*100);
+
+  document.getElementById('farm-count').innerHTML =
+    `<strong>${vis.length}</strong> farmacie<br>
+     Private: ${priv} · Comunali: ${comu}<br>
+     ✅ ${acc} · 🔵 ${trat} · 🟡 ${cont} · ❌ ${rif}<br>
+     <strong>Conquista: ${conquista}%</strong>`;
 
   vis.forEach(f=>{
     const html=f.tipo==="privata"
       ? `<div class="dot ${f.stato}"></div>`
       : `<div class="triangle ${f.stato}"></div>`;
 
-    const m=L.marker([f.lat,f.lng],{
-      icon:L.divIcon({html:html,iconSize:[14,14]})
-    }).bindPopup(`
+    const popup = `
       <strong>${f.nome}</strong><br>
       ${f.indirizzo}<br>
-      ${f.telefono || ''}<br>
+      ${f.telefono||''}<br>
+      ${f.email||''}<br>
       <a href="https://maps.google.com/?q=${f.lat},${f.lng}" target="_blank">
         Apri su Maps
       </a>
-    `);
+    `;
+
+    const m=L.marker([f.lat,f.lng],{
+      icon:L.divIcon({html:html,iconSize:[16,16]})
+    }).bindPopup(popup);
+
     farmLayer.addLayer(m);
   });
 }
